# Unconditional

./: .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md
apps/api/: AGENTS.md  pyproject.toml  pytest.ini
apps/api/src/: main.py
apps/api/src/api/v1/endpoints/: conversation.py
apps/api/src/core/: config.py
apps/api/src/models/: message.py  response.py
apps/api/src/prompts/: opening.py  system.py
apps/api/src/safety/: banned_patterns.py  crisis_detection.py  guardrails.py
apps/api/src/services/llm/: factory.py
apps/api/tests/integration/: test_conversation_endpoint.py
apps/api/tests/unit/: test_banned_patterns.py  test_crisis_detection.py  test_guardrails.py
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: ConversationView.tsx  CrisisScreen.tsx  MessageInput.tsx  MessageList.tsx
apps/web/lib/: api-client.ts  storage.ts  types.ts
docs/: AGENTS.md  contributor-guidelines.md  founder-manifesto.md  founding-story.md  mission-statement.md  mvp-outline-0.1.md  one-sentence-description.md  problem-statement.md  why-now.md
docs/governance/: code-of-conduct.md  ideal-founding-engineer.md  ideal-founding-psychiatrist.md  ideal-founding-team.md  ideal-founding-therapist.md
docs/philosophy/: founder-manifesto.md
docs/product/: user-personas.md
docs/specs/: mvp-outline-0.1.md
infra/: README.md  render.yaml
