[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend providing steady, compassionate, AI-supported presence for people during moments when they feel most alone"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Joshua Szepietowski", email = "joshszep@gmail.com" }]
keywords = [
    "mental-health",
    "ai-companion",
    "fastapi",
    "emotional-support",
    "crisis-prevention",
    "therapy-support",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.2",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.19.0",
    "uvicorn>=0.34.0",
    "openai>=1.59.7",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
]
